# SHAD

./: .travis.yml  CMakeLists.txt  README.rst  genindex.html  objects.inv  searchindex.js
api/: class_structshad_1_1rt_1_1impl_1_1AsynchronousInterface.html  class_view_hierarchy.html  classshad_1_1AbstractDataStructure.html  classshad_1_1AbstractDataStructure_1_1Catalog.html  classshad_1_1Array.html  classshad_1_1AttrEdgesPair.html  classshad_1_1AttributedEdgeIndexStorage.html  classshad_1_1DefaultEdgeIndexStorage.html  classshad_1_1EdgeIndex.html  classshad_1_1Hashmap.html  classshad_1_1IDCmp.html  classshad_1_1LocalEdgeIndex.html  classshad_1_1LocalHashmap.html  classshad_1_1LocalSet.html  classshad_1_1MemCmp.html  classshad_1_1MemCmp_3_01std_1_1vector_3_01KeyTy_01_4_01_4.html  classshad_1_1ObjectIdentifier.html  classshad_1_1ObjectIdentifierCounter.html  classshad_1_1OnePerLocality.html  classshad_1_1Set.html  classshad_1_1Vector.html  classshad_1_1Vector_1_1Iterator.html  classshad_1_1array.html  classshad_1_1buffered__insert__iterator.html  classshad_1_1impl_1_1Buffer.html  classshad_1_1impl_1_1BuffersVector.html  classshad_1_1impl_1_1array.html  classshad_1_1impl_1_1array_1_1ArrayRef.html  classshad_1_1impl_1_1array_1_1ArrayRef_3_01const_01U_01_4.html  classshad_1_1insert__iterator.html  (+335 more)
test/performance_tests/stl/: CMakeLists.txt  L0_std_min_max.cc  L0_std_min_max_perf.cc  L0_std_modifying.cc  L0_std_modifying_perf.cc  L0_std_non_modifying.cc  L0_std_non_modifying_perf.cc  L0_std_numeric.cc  L0_std_numeric_perf.cc  common.h  common.hpp  ds_tag.hpp  numeric_perf.cc
(+61 files in other folders)
